2012-07-07  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-codegen.cc(IRState::integerConstant): Hide use of
	HOST_BITS_PER_WIDE_INT macros.
	(IRState::hwi2toli): Likewise.
	(IRState::getTargetSizeConst): Likewise.

	* d-builtins.c(d_global_trees): Move declaration here.
	(lookup_C_type_name): Rename to lookup_ctype_name.
	(d_init_builtins): Move set-up of d_global_trees here.
	(gcc_d_backend_init): Move function from d-glue.cc and refactored.
	(gcc_d_backend_term): Likewise.
	* d-builtins2.cc(d_bi_init): Set-up D frontend sizes here.
	* d-glue.cc(gcc_d_backend_init): Removed.
	(gcc_d_backend_term): Likewise.

	* d-incpath.cc(add_phobos_versyms): New function to scan
	phobos-vers-syms file.
	(register_import_chains): Renamed to add_import_paths.
	* d-lang.cc(d_init): Call add_phobos_versyms and add_import_paths.
	(d_parse_int): Don't use strtol to get number from argument string.

	* d-incpath.cc(maybe_fixup_phobos_target): Remove.
	(register_import_chains): Remove use of maybe_fixup_phobos_target.
	* d-lang.cc(maybe_fixup_os_versym): Remove
	(d_init): Remove use of maybe_fixup_os_versym.

	* d-lang.cc(saved_reg_names): Remove.
	(d_init): Remove use of saved_reg_names.
	(d_post_options): Likewise.

2012-07-05  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-glue.cc(StructLiteralExp::toElem): Stop after first assignment for
	constructors built for union types.

2012-07-01  Iain Buclaw  <ibuclaw@ubuntu.com>

	* symbol.h(deferredNestedFuncs): Renamed from otherNestedFuncs, use as
	value type rather than pointer.
	(thunks): Use as value type rather than pointer.
	* d-decls.cc(FuncDeclaration::toSymbol): Remove check for
	deferredNestedFuncs being NULL.
	(FuncDeclaration::toThunkSymbol): Remove check for thunks being NULL.
	* d-glue.cc(DelegateExp::toElem): Remove check for deferredNestedFuncs
	being NULL.
	(FuncDeclaration::toObjFile): Likewise.
	* d-objfile.cc(ObjectFile::shouldEmit): Add nested functions to
	deferredNestedFuncs of their parent function incase parent is actually